# matching-pursuit

./: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.lin  Makefile.win  autogen.sh  configure.ac  mp5.dev  mp5.layout  readme.doc
debian/: .gitignore  changelog  control  copyright  install  rules
doc/: mp5_dokumentacja.doc
matlab/: gabor.m  mp2tfv5.m  mp5_demo.m  readallbooksv5rh.m  readonebookv5rh.m  rys_mp5.m
src/: atom.c  cmd.c  dic.c  fftTest.c  gabor.c  io.c  io_mp5.c  main.c  matrix.c  mmp.c  mmp1.c  mmp2.c  mmp3.c  mp5.c  mtwist.c  new_io.c  queue.c  r250.c  random.c  smp.c  stringTools.c  tools.c  vector.c
src/include/: .cvsignore  atom.h  cmd.h  def.h  dic.h  gabor.h  io.h  io_mp5.h  matrix.h  mmp.h  mmp1.h  mmp2.h  mmp3.h  mp5.h  new_io.h  queue.h  r250.h  random.h  smp.h  stringTools.h  tools.h  types.h  vector.h
test/: example.set
